# server/src/models/foods/FoodPreferenceModel.js
@@ -1,0 +1,17 @@
+class FoodPreferenceModel {
+  constructor({ id, name, value }) {
+    this.id = id;
+    this.name = name;
+    this.value = value;
+  }
+
+  static fromJson(json) {
+    return new FoodPreferenceModel({
+      id: json["allergen_id"],
+      name: json["allergen_name"],
+      value: json["allergen_value"] == "1" ? true : json["allergen_value"] == "0" ? false : null,
+    });
+  }
+}
+
+export default FoodPreferenceModel;
