# server/src/models/recipes/RecipeSearchModel.js
@@ -11,7 +11,7 @@ class RecipeSearchModel {
     const recipeJson = recipesJson ? recipesJson["recipe"] : null;
     const recipes = recipeJson ? recipeJson.map(e => RecipeModel.fromJson(e)) : [];
     return new RecipeSearchModel({
-      pageNumber: recipesJson ? recipesJson["page_number"] : null,
+      pageNumber: recipesJson?.["page_number"] ? parseInt(recipesJson["page_number"]) : null,
       recipes: recipes,
     });
   }
