# server/swagger.json
@@ -1,15 +1,15 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "This is a sample server for a calorie tracking tool.",
+    "description": "API documentation for the Flutter Calory Tool server",
     "version": "1.0.0",
-    "title": "Calory Tool API",
+    "title": "Flutter Calory Tool API",
     "contact": {
       "email": "support@calorytool.com"
     }
   },
-  "host": "localhost:8080",
-  "basePath": "/api/v1",
+  "host": "localhost:3000",
+  "basePath": "/api",
   "schemes": [
     "http"
   ],
@@ -19,8 +19,8 @@
         "tags": [
           "Foods"
         ],
-        "summary": "Search for foods",
-        "description": "Search for foods by name",
+        "summary": "Search foods",
+        "description": "Search for foods based on query parameters",
         "parameters": [
           {
             "name": "query",
@@ -28,13 +28,19 @@
             "description": "The search query",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer"
           }
         ],
         "responses": {
           "200": {
-            "description": "Successful operation",
+            "description": "Successful response",
             "schema": {
-              "$ref": "#/definitions/FoodSearchResult"
+              "$ref": "#/definitions/foodSearchModel"
             }
           },
           "400": {
@@ -51,8 +57,8 @@
         "tags": [
           "Recipes"
         ],
-        "summary": "Search for recipes",
-        "description": "Search for recipes by name",
+        "summary": "Search recipes",
+        "description": "Search for recipes based on query parameters",
         "parameters": [
           {
             "name": "query",
@@ -60,13 +66,19 @@
             "description": "The search query",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer"
           }
         ],
         "responses": {
           "200": {
-            "description": "Successful operation",
+            "description": "Successful response",
             "schema": {
-              "$ref": "#/definitions/RecipeSearchResult"
+              "$ref": "#/definitions/recipeSearchModel"
             }
           },
           "400": {
@@ -80,103 +92,235 @@
     }
   },
   "definitions": {
-    "FoodSearchResult": {
+    "foodSearchModel": {
       "type": "object",
       "properties": {
-        "page_number": {
-          "type": "integer",
-          "format": "int32"
+        "pageNumber": {
+          "type": "integer"
         },
         "foods": {
-          "$ref": "#/definitions/Food"
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/foodModel"
+          }
         }
       }
     },
-    "Food": {
+    "foodModel": {
       "type": "object",
       "properties": {
-        "brand_name": {
+        "id": {
           "type": "string"
         },
-        "food_description": {
+        "name": {
           "type": "string"
         },
-        "food_id": {
+        "brandName": {
           "type": "string"
         },
-        "food_name": {
+        "type": {
           "type": "string"
         },
-        "food_type": {
+        "subCategories": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "url": {
           "type": "string"
         },
-        "food_url": {
-          "type": "string"
+        "allergens": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/foodAllergenModel"
+          }
+        },
+        "preferences": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/foodPreferenceModel"
+          }
+        },
+        "servings": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/foodServingModel"
+          }
         }
       }
     },
-    "RecipeSearchResult": {
+    "foodAllergenModel": {
       "type": "object",
       "properties": {
-        "page_number": {
-          "type": "integer",
-          "format": "int32"
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "value": {
+          "type": "boolean"
+        }
+      }
+    },
+    "foodPreferenceModel": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "value": {
+          "type": "boolean"
+        }
+      }
+    },
+    "foodServingModel": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "url": {
+          "type": "string"
+        },
+        "metricServingAmount": {
+          "type": "number"
+        },
+        "metricServingUnit": {
+          "type": "string"
+        },
+        "numberOfUnits": {
+          "type": "number"
+        },
+        "measurementDescription": {
+          "type": "string"
+        },
+        "calories": {
+          "type": "number"
+        },
+        "carbohydrate": {
+          "type": "number"
+        },
+        "protein": {
+          "type": "number"
+        },
+        "fat": {
+          "type": "number"
+        },
+        "saturatedFat": {
+          "type": "number"
+        },
+        "polyunsaturatedFat": {
+          "type": "number"
+        },
+        "monounsaturatedFat": {
+          "type": "number"
+        },
+        "transFat": {
+          "type": "number"
+        },
+        "cholesterol": {
+          "type": "number"
+        },
+        "sodium": {
+          "type": "number"
+        },
+        "potassium": {
+          "type": "number"
+        },
+        "fiber": {
+          "type": "number"
+        },
+        "sugar": {
+          "type": "number"
+        },
+        "addedSugars": {
+          "type": "number"
+        },
+        "vitaminA": {
+          "type": "number"
+        },
+        "vitaminC": {
+          "type": "number"
+        },
+        "vitaminD": {
+          "type": "number"
+        },
+        "calcium": {
+          "type": "number"
+        },
+        "iron": {
+          "type": "number"
+        }
+      }
+    },
+    "recipeSearchModel": {
+      "type": "object",
+      "properties": {
+        "pageNumber": {
+          "type": "integer"
         },
         "recipes": {
-          "$ref": "#/definitions/Recipe"
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/recipeModel"
+          }
         }
       }
     },
-    "Recipe": {
+    "recipeModel": {
       "type": "object",
       "properties": {
-        "recipe_description": {
+        "id": {
           "type": "string"
         },
-        "recipe_id": {
+        "name": {
           "type": "string"
         },
-        "recipe_image": {
+        "description": {
           "type": "string"
         },
-        "recipe_ingredients": {
+        "image": {
+          "type": "string"
+        },
+        "ingredients": {
           "type": "array",
           "items": {
             "type": "string"
           }
         },
-        "recipe_name": {
-          "type": "string"
-        },
-        "recipe_nutrition": {
-          "$ref": "#/definitions/RecipeNutrition"
-        },
-        "recipe_types": {
+        "types": {
           "type": "array",
           "items": {
             "type": "string"
           }
+        },
+        "nutrition": {
+          "$ref": "#/definitions/recipeNutritionModel"
         }
       }
     },
-    "RecipeNutrition": {
+    "recipeNutritionModel": {
       "type": "object",
       "properties": {
         "calories": {
-          "type": "number",
-          "format": "double"
+          "type": "integer"
         },
         "carbs": {
-          "type": "number",
-          "format": "double"
+          "type": "number"
         },
         "fat": {
-          "type": "number",
-          "format": "double"
+          "type": "number"
         },
         "protein": {
-          "type": "number",
-          "format": "double"
+          "type": "number"
         }
       }
     }
